--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,5 +1,7 @@
 @import "./variables.module.scss";
 
+@import url('https://fonts.googleapis.com/css2?family=Codystar&display=swap');
+
 .container {
   flex-direction: column;
   width: 480px;
@@ -7,6 +9,7 @@
   border: 1px solid $white;
   justify-content: center;
   align-items: center;
+  font-family: 'Codystar';
 }
 
 .main {
@@ -17,7 +20,14 @@
   height: 100%;
 }
 
-.row{
+.row {
   flex-direction: row;
   width: 100%;
+}
+
+.clock_wrap {
+  justify-content: center;
+  flex-grow: 1;
+  align-items: center;
+  display: flex;
 }
