--- a/styles/weather.module.scss
+++ b/styles/weather.module.scss
@@ -4,11 +4,14 @@
     border: 1px solid $white;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .temperature {
     display: flex;
     flex-direction: column;
+    font-weight: bold;
+    text-align: center;
 }
 
 .degrees {
@@ -16,13 +19,14 @@
     font-size: 50px;
     padding: 0 .5rem;
     margin: 0;
+    line-height: 1;
 }
 
 .feels_like {
     font-size: 10px;
-    color: $gray;
     padding: 0 .5rem;
     margin: 0;
+    font-family: 'Roboto';
 }
 
 .weather__info {
@@ -30,6 +34,10 @@
     p {
         margin: 0;
         padding: 0;
+    }
+
+    span {
+        font-family: 'Roboto';
     }
 }
 
