--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -10,6 +10,9 @@
   justify-content: center;
   align-items: center;
   font-family: 'Codystar';
+  background-color: $black;
+  padding:0;
+  margin:0;
 }
 
 .main {
