Readme.md changes

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -6,10 +6,10 @@
   flex-direction: column;
   width: 480px;
   height: 320px;
-  border: 1px solid $white;
+  // border: 1px solid $white;
   justify-content: center;
   align-items: center;
-  font-family: 'Codystar';
+  font-family: 'Roboto';
   background-color: $black;
   padding:0;
   margin:0;
