--- a/styles/weather.module.scss
+++ b/styles/weather.module.scss
@@ -20,24 +20,28 @@
     padding: 0 .5rem;
     margin: 0;
     line-height: 1;
+    font-family: 'Codystar';
 }
 
 .feels_like {
-    font-size: 10px;
+    font-size: 1rem;
     padding: 0 .5rem;
     margin: 0;
     font-family: 'Roboto';
+    color:$white;
+    font-weight: 100;
 }
 
 .weather__info {
-
+    font-size: 1.2rem;
+    color:$white;
     p {
         margin: 0;
         padding: 0;
     }
 
     span {
-        font-family: 'Roboto';
+        font-family: 'Codystar';
     }
 }
 
