Router and bottom bar

--- a/styles/Clock.module.scss
+++ b/styles/Clock.module.scss
@@ -5,7 +5,7 @@
   text-align: center;
   line-height: 1;
   width: 100%;
-  font-size: 95px;
+  font-size: 10rem;
   font-weight: bold;
   text-shadow: 0px 0 20px rgb(0 0 255 / 60%);
   display: flex;
@@ -23,7 +23,7 @@
   animation: blink 2s linear infinite;
 }
 .digits{
-  width: 120px;
+  width: 12rem;
   text-align: center;
   margin: 0;
 }
