--- a/styles/money.module.scss
+++ b/styles/money.module.scss
@@ -2,7 +2,6 @@
 
 .container {
     display: flex;
-    align-items: center;
     justify-content: space-around;
     flex-direction: column;
     height: 100%;
@@ -19,7 +18,8 @@
 
 .money {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .money b {
