--- a/styles/Clock.module.scss
+++ b/styles/Clock.module.scss
@@ -5,13 +5,14 @@
   text-align: center;
   line-height: 1;
   width: 100%;
-  font-size: 10rem;
-  font-weight: bold;
+  font-size: 7rem;
+  // font-weight: bold;
   text-shadow: 0px 0 20px rgb(0 0 255 / 60%);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  font-family: 'Rubik Dirt';
 }
 
 .dot {
